# monotonic-rnnt

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
include/: cpu_rnnt.h  cpu_workspace_manager.h  gpu_rnnt.h  gpu_rnnt_kernel.h  gpu_workspace_manager.h  hostdevice.h  options.h  reduce.h  rnnt.h  rnnt_entrypoint.h  rnnt_helper.h  status.h  workspace_manager.h
include/detail/: cpu_rnnt.h  gpu_rnnt.h  gpu_rnnt_kernel.h
pytorch_binding/: __init__.py  monotonic_rnnt.cu  monotonic_rnnt_op.py  test.py
src/: rnnt_entrypoint.cpp  status.cpp
tensorflow_binding/: __init__.py  conftest.py  monotonic_rnnt_op.cc  monotonic_rnnt_op.cu  monotonic_rnnt_op_align_restrict.cu  register_op.py  returnn_tf_op.py  setup.py  test.py
tensorflow_binding/src/: monotonic_rnnt_op.cc
tests/: random.cpp  test.h  test_cpu.cpp  test_gpu.cu  test_time.cpp  test_time.cu
